--- a/examples/ud3/ex4/doc.html
+++ b/examples/ud3/ex4/doc.html
@@ -1,34 +1,19 @@
-<section class="slides">
-  <article class="slide">
-      <div class="titulo">
-          <div class="top">WORK</div>
-          <div class="bottom">SPACE</div>
-      </div>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro voluptatem recusandae repellat ipsa tempora deleniti reprehenderit, explicabo, illum quisquam amet quas.</p>
-      <div class="boton">Learn more</div>
-  </article>
-  <article class="slide">
-      <div class="titulo">
-          <div class="top">FLEX</div>
-          <div class="bottom">OFFICE</div>
-      </div>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro voluptatem recusandae repellat ipsa tempora deleniti reprehenderit, explicabo, illum quisquam amet quas.</p>
-      <div class="boton">Learn more</div>
-  </article>
-  <article class="slide">
-      <div class="titulo">
-          <div class="top">WORK</div>
-          <div class="bottom">SPACE</div>
-      </div>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro voluptatem recusandae repellat ipsa tempora deleniti reprehenderit, explicabo, illum quisquam amet quas.</p>
-      <div class="boton">Learn more</div>
-  </article>
-  <article class="slide">
-      <div class="titulo">
-          <div class="top">FLEX</div>
-          <div class="bottom">OFFICE</div>
-      </div>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro voluptatem recusandae repellat ipsa tempora deleniti reprehenderit, explicabo, illum quisquam amet quas.</p>
-      <div class="boton">Learn more</div>
-  </article>
-</section>
+<div class="contenedor">
+    <div class="superior">
+        <img class="imagen1" src="./examples/ud3/ex4/img/imagen1.jpg">
+        <img class="imagen2" src="./examples/ud3/ex4/img/imagen2.jpg">
+    </div>
+    <div class="inferior">
+        <img class="imagen3" src="./examples/ud3/ex4/img/imagen3.jpg">
+        <div class="bloque_inferior">
+            <div class="arriba">
+                <img class="imagen4" src="./examples/ud3/ex4/img/imagen4.jpg">
+                <img class="imagen5" src="./examples/ud3/ex4/img/imagen5.jpg">
+            </div>
+            <div class="abajo">
+                <img class="imagen6" src="./examples/ud3/ex4/img/imagen6.jpg">
+                <img class="imagen7" src="./examples/ud3/ex4/img/imagen7.jpg">
+            </div>
+        </div>
+    </div>
+</div>
