--- a/examples/ud3/ex5/doc.html
+++ b/examples/ud3/ex5/doc.html
@@ -1,19 +1,30 @@
-<div class="contenedor">
-    <div class="superior">
-        <img class="imagen1" src="./examples/ud3/ex5/img/imagen1.jpg">
-        <img class="imagen2" src="./examples/ud3/ex5/img/imagen2.jpg">
+<section class="catalogue-container">
+
+<div class="catalogue">
+    <div class="card">
+    <div class="imgBx">
+        <img src="./examples/ud3/ex5/img/sandia.png" alt="">
     </div>
-    <div class="inferior">
-        <img class="imagen3" src="./examples/ud3/ex5/img/imagen3.jpg">
-        <div class="bloque_inferior">
-            <div class="arriba">
-                <img class="imagen4" src="./examples/ud3/ex5/img/imagen4.jpg">
-                <img class="imagen5" src="./examples/ud3/ex5/img/imagen5.jpg">
-            </div>
-            <div class="abajo">
-                <img class="imagen6" src="./examples/ud3/ex5/img/imagen6.jpg">
-                <img class="imagen7" src="./examples/ud3/ex5/img/imagen7.jpg">
-            </div>
-        </div>
+    <div class="contentBx">
+      <h2>Zumo de Melon</h2>
+      <div class="size">
+          <h3>Tamaño:</h3>
+          <span>33cl</span>
+          <span class="active">50cl</span>
+          <span>1l</span>
+      </div>
+      <div class="unidades">
+          <h3>Unidades:</h3>
+          <span>-</span>
+          <input type="number" name="unidades" id="unidades" min="1" value="1">
+          <span>+</span>
+      </div>
+      <div class="precio">
+          <h3>Precio:</h3>
+          <span>5€</span>
+      </div>
+      <a href="#" class="button primary">Comprar</a>
     </div>
+  </div>
 </div>
+</section>
