--- a/examples/ud4/ex1/doc.html
+++ b/examples/ud4/ex1/doc.html
@@ -1,5 +1,7 @@
-<div class="trigger">
-  <div class="onda onda1"></div>
-  <div class="onda onda2"></div>
-  <div class="onda onda3"></div>
+<div class="onda">
+  <div class="onda1"></div>
+  <div class="onda2"></div>
+  <div class="onda3"></div>
+  <div class="onda4"></div>
+  <div class="onda5"></div>
 </div>
