--- a/examples/ud3/ex6/doc.html
+++ b/examples/ud3/ex6/doc.html
@@ -1,34 +1,7 @@
-<section class="slides">
-  <article class="slide">
-      <div class="titulo">
-          <div class="top">WORK</div>
-          <div class="bottom">SPACE</div>
-      </div>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro voluptatem recusandae repellat ipsa tempora deleniti reprehenderit, explicabo, illum quisquam amet quas.</p>
-      <div class="boton">Learn more</div>
-  </article>
-  <article class="slide">
-      <div class="titulo">
-          <div class="top">FLEX</div>
-          <div class="bottom">OFFICE</div>
-      </div>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro voluptatem recusandae repellat ipsa tempora deleniti reprehenderit, explicabo, illum quisquam amet quas.</p>
-      <div class="boton">Learn more</div>
-  </article>
-  <article class="slide">
-      <div class="titulo">
-          <div class="top">WORK</div>
-          <div class="bottom">SPACE</div>
-      </div>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro voluptatem recusandae repellat ipsa tempora deleniti reprehenderit, explicabo, illum quisquam amet quas.</p>
-      <div class="boton">Learn more</div>
-  </article>
-  <article class="slide">
-      <div class="titulo">
-          <div class="top">FLEX</div>
-          <div class="bottom">OFFICE</div>
-      </div>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro voluptatem recusandae repellat ipsa tempora deleniti reprehenderit, explicabo, illum quisquam amet quas.</p>
-      <div class="boton">Learn more</div>
-  </article>
-</section>
+<div class="carta">
+  <div class="cara anverso"></div>
+  <div class="cara reverso">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sapien urna, volutpat nec
+    porttitor quis, vulputate et nibh. Vivamus scelerisque accumsan velit sit amet tincidunt. Aliquam ex arcu,
+    facilisis non ante et, accumsan posuere orci. Vivamus purus felis, maximus ac libero maximus, placerat
+    maximus lectus. </div>
+</div>
