--- a/examples/ud3/ex7/doc.html
+++ b/examples/ud3/ex7/doc.html
@@ -1,34 +1,27 @@
-<section class="slides">
-  <article class="slide">
-      <div class="titulo">
-          <div class="top">WORK</div>
-          <div class="bottom">SPACE</div>
-      </div>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro voluptatem recusandae repellat ipsa tempora deleniti reprehenderit, explicabo, illum quisquam amet quas.</p>
-      <div class="boton">Learn more</div>
-  </article>
-  <article class="slide">
-      <div class="titulo">
-          <div class="top">FLEX</div>
-          <div class="bottom">OFFICE</div>
-      </div>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro voluptatem recusandae repellat ipsa tempora deleniti reprehenderit, explicabo, illum quisquam amet quas.</p>
-      <div class="boton">Learn more</div>
-  </article>
-  <article class="slide">
-      <div class="titulo">
-          <div class="top">WORK</div>
-          <div class="bottom">SPACE</div>
-      </div>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro voluptatem recusandae repellat ipsa tempora deleniti reprehenderit, explicabo, illum quisquam amet quas.</p>
-      <div class="boton">Learn more</div>
-  </article>
-  <article class="slide">
-      <div class="titulo">
-          <div class="top">FLEX</div>
-          <div class="bottom">OFFICE</div>
-      </div>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro voluptatem recusandae repellat ipsa tempora deleniti reprehenderit, explicabo, illum quisquam amet quas.</p>
-      <div class="boton">Learn more</div>
-  </article>
-</section>
+<div class="baraja">
+  <div id="mew" name="mew" class="carta" onclick="girarCarta(this);">
+    <div class="anverso"></div>
+    <div class="reverso"></div>
+  </div>
+  <div id="mimikyu" name="mimikyu" class="carta" onclick="girarCarta(this);">
+    <div class="anverso"></div>
+    <div class="reverso"></div>
+  </div>
+  <div id="pikachu" name="pikachu" class="carta" onclick="girarCarta(this);">
+    <div class="anverso"></div>
+    <div class="reverso"></div>
+  </div>
+  <div id="mimikyu" name="mimikyu" class="carta" onclick="girarCarta(this);">
+    <div class="anverso"></div>
+    <div class="reverso"></div>
+  </div>
+  <div id="pikachu" name="pikachu" class="carta" onclick="girarCarta(this);">
+    <div class="anverso"></div>
+    <div class="reverso"></div>
+  </div>
+  <div id="mew" name="mew" class="carta" onclick="girarCarta(this);">
+    <div class="anverso"></div>
+    <div class="reverso"></div>
+  </div>
+
+</div>
