--- a/examples/ud4/ex3/doc.html
+++ b/examples/ud4/ex3/doc.html
@@ -1,8 +1,5 @@
-<div class="papelera">
-  <div class="papelera__cuerpo">
-      <img class="papelera__pedal" src="./examples/ud4/ex3/img/pedal.png">
-      <img class="papelera__tapa" src="./examples/ud4/ex3/img/tapa.png">
-      <img class="pelota" src="./examples/ud4/ex3/img/pelota.png">
-      <img class="" src="./examples/ud4/ex3/img/cuerpo.png">
-  </div>
-</div>
+<img class="hourglass" src="./examples/ud4/ex2/img/hourglass.png">
+    <div class="progress">
+        <div class="progress__content"></div>
+    </div>
+
