--- a/examples/ud4/ex2/doc.html
+++ b/examples/ud4/ex2/doc.html
@@ -1,5 +1,5 @@
-<img class="hourglass" src="./examples/ud4/ex2/img/hourglass.png">
-    <div class="progress">
-        <div class="progress__content"></div>
-    </div>
-
+<div class="contenido">
+  <img class="circuito" src="./examples/ud4/ex4/img/circuito.png">
+  <div class="chispa"></div>
+  <div class="bombilla"></div>
+</div>
