--- a/examples/ud4/ex4/doc.html
+++ b/examples/ud4/ex4/doc.html
@@ -1,5 +1,8 @@
-<div class="contenido">
-  <img class="circuito" src="./examples/ud4/ex4/img/circuito.png">
-  <div class="chispa"></div>
-  <div class="bombilla"></div>
+<div class="papelera">
+  <div class="papelera__cuerpo">
+      <img class="papelera__pedal" src="./examples/ud4/ex3/img/pedal.png">
+      <img class="papelera__tapa" src="./examples/ud4/ex3/img/tapa.png">
+      <img class="pelota" src="./examples/ud4/ex3/img/pelota.png">
+      <img class="" src="./examples/ud4/ex3/img/cuerpo.png">
+  </div>
 </div>
