--- a/examples/ud4/ex9/doc.html
+++ b/examples/ud4/ex9/doc.html
@@ -1,8 +1,17 @@
-<div>
-    <h1>Más loaders en:</h1>
-    <a target="_blank" href="https://cssloaders.github.io/">CSSLOADERS</a>
+<div class="slider slider--ej1">
+    <img class="slider__img" src="./examples/ud4/ex8/img/slider1.jpg" alt="">
+    <img class="slider__img" src="./examples/ud4/ex8/img/slider2.jpg" alt="">
+    <img class="slider__img" src="./examples/ud4/ex8/img/slider3.jpg" alt="">
 </div>
 
-<br>
-
-<div class="loader"></div>
+<label for="pos1">Primera imagen</label>
+<input type="radio" name="slider-position" id="pos1">
+<label for="pos2">Segunda imagen</label>
+<input type="radio" name="slider-position" id="pos2">
+<label for="pos3">Tercera imagen</label>
+<input type="radio" name="slider-position" id="pos3">
+<div class="slider slider--ej2">
+    <img class="slider__img" src="./examples/ud4/ex8/img/slider1.jpg" alt="">
+    <img class="slider__img" src="./examples/ud4/ex8/img/slider2.jpg" alt="">
+    <img class="slider__img" src="./examples/ud4/ex8/img/slider3.jpg" alt="">
+</div>
