--- a/examples/ud1/ex6/doc.html
+++ b/examples/ud1/ex6/doc.html
@@ -1,5 +1,20 @@
-<ul>
-  <li>Selectores CSS: <a href="https://laboratoria.github.io/css-diner/">CSS Diner</a></li>
-  <li>HTML Flexbox: <a href="https://laboratoria.github.io/flexboxfroggy/">Flexbox Froggy</a></li>
-  <li>HTML Grid: <a href="https://cssgridgarden.com/#es">CSS Grid Garden</a></li>
-</ul>
+    <header class="col-12 header">
+        HEADER
+    </header>
+    <nav class="col-12 menu">
+        NAV
+    </nav>
+    <div class="row">
+        <section class="col-8 section">
+            SECTION
+            <article class="article">
+                ARTICLE
+            </article>
+        </section>
+        <aside class="col-3 aside">
+            ASIDE
+        </aside>
+    </div>
+    <footer class="col-12 footer">
+        FOOTER
+    </footer>
