--- a/examples/ud1/ex12/doc.html
+++ b/examples/ud1/ex12/doc.html
@@ -1,132 +1,89 @@
-<!-- Contenedor -->
-<div id="contenedor">
-
-	<!-- Cabecera -->
-	<div id="cabecera">
-		<div id="logo">
-			<h1><span>LOGOTIPO</span></h1>
-		</div>
-
-		<div id="buscador">
-			<form action="#" method="post">
-				Buscar &nbsp; <input name="busqueda" type="text" />
-			</form>
-		</div>
-		
-		<div class="clear"></div>
-	</div>
-	<!-- /Cabecera -->
-	
-	<!-- Menu principal -->
-	<div id="menu">
-		<ul id="menu_principal">
-			<li><a href="#">Lorem</a></li>
-			<li><a href="#">Ipsum</a></li>
-			<li><a href="#">Dolor</a></li>
-			<li><a href="#">Sit</a></li>
-			<li><a href="#">Amet</a></li>
-		</ul>
-		<div class="clear"></div>
-	</div>
-	
-
-	<!-- Lateral -->
-	<div id="lateral">
-	
-		<!-- Noticias -->
-		<div id="noticias">
-			<h3><a href="#">Noticias</a></h3>
-			<p><span class="fecha">dd/mm/aaaa</span> <a href="#">Lorem ipsum dolor sit amet</a></p>
-			<p><span class="fecha">dd/mm/aaaa</span> <a href="#">Consectetuer adipiscing elit</a></p>
-			<p><span class="fecha">dd/mm/aaaa</span> <a href="#">Donec molestie nunc eu sapien</a></p>
-			<p><span class="fecha">dd/mm/aaaa</span> <a href="#">Maecenas aliquam dolor eget metus</a></p>
-			<p><span class="fecha">dd/mm/aaaa</span> <a href="#">Fusce tristique lorem id metus</a></p>
-				
-			<h3><a href="#">Enlaces relacionados</a></h3>
-			<ul>
-				<li><a href="#">Proin placerat</a></li>
-				<li><a href="#">Nulla in felis</a></li>
-				<li><a href="#">Nam luctus</a></li>
-			</ul>
-		</div>
-		<!-- /Noticias -->
-	
-		<!-- Publicidad -->
-		<div id="publicidad">
-			<h3><a href="#">Publicidad</a></h3>
-			<p>Etiam fermentum, nisl tincidunt blandit interdum, massa velit posuere dolor, sed euismod sem odio at mi.</p>
-			<p>Duis porta placerat arcu. Nullam felis pede, commodo vel, suscipit a, molestie vel, felis. Maecenas mattis est vel est.</p>
-			<p><a href="#">Seguir leyendo...</a></p>
-		</div>
-		<!-- /Publicidad -->
-
-	</div>
-	<!-- /Lateral -->
-	
-<div id="contenido">
-	
-	<!-- Principal -->
-	<div id="principal">
-		
-		<div class="articulo">
-			<h2>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</h2>
-		
-			<img src="./examples/ud1/ex12/img/imagen.png" alt="Imagen gen?rica" />
+  <div id="main">
+    <div id="header">
+      <div id="logo">
+        <div id="logo_text">
+  
+          <h1><a href="index.html">Test Evaluación Inicial</a></h1>
+          <h2>Debes dar estilo a todos los elementos que se detallan en el contenido.</h2>
+        </div>
+      </div>
+      <div id="menubar">
+        <ul id="menu">
+          <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
+          <li class="selected"><a href="#">Home</a></li>
+          <li><a href="#">Ejemplos</a></li>
+          <li><a href="#">Noticias</a></li>
+          <li><a href="#">Otra página</a></li>
+          <li><a href="#">Otra más</a></li>
+        </ul>
+      </div>
+    </div>
+    <div id="content_header"></div>
+    <div id="site_content">
+      <div id="banner"></div>
+	  <div id="sidebar_container">
+        <div class="sidebar">
+          <div class="sidebar_top"></div>
+          <div class="sidebar_item">
+            <!-- insert your sidebar items here -->
+            <h3>Noticias</h3>
+            <h4>Este es un ejemplo de práctica</h4>
+            <h5>martes, 10 de septiembre de 2019</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sem, conubia cras sociis cum aenean metus lacinia rutrum, nulla nisl leo at congue lectus viverra. Massa dui torquent mauris sollicitudin proin feugiat, cras vestibulum sapien vehicula tristique, quam natoque in ut phasellus. Diam himenaeos iaculis et gravida porttitor pharetra elementum sapien, molestie tellus aliquet imperdiet lectus quis nibh quam, sociosqu augue felis varius curabitur sagittis magnis.</p>
+          </div>
+          <div class="sidebar_base"></div>
+        </div>
+        <div class="sidebar">
+          <div class="sidebar_top"></div>
+          <div class="sidebar_item">
+            <h3>Links útiles para el curso</h3>
+            <ul>
+              <li><a href="https://www.w3.org/TR/html52/">w3c html 5.2</a></li>
+              <li><a href="https://www.w3.org/TR/CSS/">w3c css 3</a></li>
+			  <li><a href="https://developer.mozilla.org/es/">mdn</a></li>
+              <li><a href="https://www.w3schools.com/">w3schools</a></li>
+            </ul>
+          </div>
+          <div class="sidebar_base"></div>
+        </div>
+      </div>
+      <div id="content">
+        <h1>Debes crear una hoja de estilos para que tu página se parezca a esta:</h1>
+        <p>Pistas</p>
+		<ul>
+			<li>body 'trebuchet ms', arial, sans-serif #FFF #555</li>
+			<li>h1, h2, h3, h4, h5  #362C20   </li>
+			<li>h1, h2, h3 'century gothic', arial  #000</li>
+		    <li>a, a:hover</li>
+			<li>ul li </li>
+			<li></li>
+			<li>header  #000  border-bottom: 1px solid #3d3d3d;</li>
 			
-			<p>Nullam est lacus, suscipit ut, dapibus quis, condimentum ac, risus. Vivamus vestibulum, ipsum sollicitudin faucibus pharetra, dolor metus fringilla dui, vel aliquet pede diam tempor tortor.</p>
-			<p>Vestibulum pulvinar urna et quam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam vel turpis vitae dui imperdiet laoreet. Quisque eget ipsum.</p>
-			<p>Donec commodo, turpis vel venenatis sollicitudin, quam ante convallis justo, sed eleifend justo lectus quis sapien. Ut consequat libero eget est.</p>
-			<p><a href="#">Seguir leyendo...</a></p>
-		</div>
-	
-		<div class="articulo">
-			<h2>Vivamus lobortis turpis ac ante fringilla faucibus</h2>
-		
-			<img src="./examples/ud1/ex12/img/imagen.png" alt="Imagen gen?rica" />
-			
-			<p>Quisque eget ipsum. Donec commodo, turpis vel venenatis sollicitudin, quam ante convallis justo, sed eleifend justo lectus quis sapien. Ut consequat libero eget est.</p>
-			<p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam dictum hendrerit neque. Mauris id ligula non elit mattis semper. Fusce arcu ipsum, tempus eget, tincidunt at, imperdiet in, mi.</p>
-			<p>Sed fermentum cursus dolor. Aenean a diam. Phasellus feugiat. Donec tempor dignissim sem.</p>
-			<p><a href="#">Seguir leyendo...</a></p>
-		</div>
-		
-	</div>
-	<!-- /Principal -->
-	
-	<!-- Secundario -->
-	<div id="secundario">
-		<h2>Phasellus blandit</h2>
-		<p>Praesent sodales imperdiet augue. Mauris lorem felis, semper eu, tincidunt eu, sollicitudin eget, sem. Nulla facilisi. Morbi ut enim ut enim ultricies dapibus.</p>
-		<p><a href="#">Seguir leyendo...</a></p>
-	
-		<h2>Nullam vel turpis</h2>
-		<p>Donec commodo, turpis vel venenatis sollicitudin, quam ante convallis justo, sed eleifend justo lectus quis sapien. Ut consequat libero eget est.</p>
-		<p><a href="#">Seguir leyendo...</a></p>
-	</div>
-	<!-- /Secundario -->
-
-	</div>
-	<!-- /Contenido -->
-	
-    <div class="clear"></div>
-	
-    <!-- Pie -->
-	<div id="pie">
-		<span class="enlaces">
-			<a href="#">Nulla</a> |
-			<a href="#">Pharetra</a> |
-			<a href="#">Luctus</a> |
-			<a href="#">Ipsum</a> |
-			<a href="#">Proin</a> |
-			<a href="#">Placerat</a>
-		</span>
-		
-		<span class="copyright">
-			&copy; Copyright Lorem ipsum
-		</span>
-		<div class="clear"></div>
-	</div>
-	<!-- /Pie -->
-
-</div>
-<!-- /Contenedor -->
+			<li>banner background: transparent url(banner.jpg) no-repeat; border: 10px solid #DDD;</li>
+			<li>logo background: #1d1d1d; position: relative;</li>
+			<li>#logo #logo_text 
+				{ position: absolute; 
+				top: 10px;
+				left: 0;}</li>
+			<li>menubar
+				{ width: 872px;
+				  height: 45px;
+				  padding-right: 8px;
+				  background: #2D2D2D;
+				  border-top: 1px solid #3D3D3D;} </li>
+			<li>content ul li, .sidebar ul li background: url(bullet.png) no-repeat;</li>
+			<li></li>
+        </ul>
+        <h2>Compatibilidad con navegadores</h2>
+        <ul>
+          <li>FireFox</li>
+          <li>Chrome</li>
+		  <li>Edge</li>
+        </ul>
+      </div>
+    </div>
+    <div id="content_footer"></div>
+    <div id="footer">
+      <p>¡Al tajo!</p>
+    </div>
+  </div>
