Pendiente ej1 UD2 + Bootstrap + Canvas

--- a/examples/ud6/ex3/doc.html
+++ b/examples/ud6/ex3/doc.html
@@ -1,30 +1,37 @@
 <section class="container">
-  <div class="cube" id="cube1">
+  <div id="cube">
     <div class="front">
+      <span class="dot dot1"></span>
     </div>
     <div class="back">
+      <span class="dot dot1"></span>
+      <span class="dot dot2"></span>
     </div>
     <div class="right">
+      <span class="dot dot1"></span>
+      <span class="dot dot2"></span>  
+      <span class="dot dot3"></span>
     </div>
     <div class="left">
+      <span class="dot dot1"></span>
+      <span class="dot dot2"></span>  
+      <span class="dot dot3"></span>
+      <span class="dot dot4"></span>
     </div>
     <div class="top">
+      <span class="dot dot1"></span>
+      <span class="dot dot2"></span>  
+      <span class="dot dot3"></span>
+      <span class="dot dot4"></span>
+      <span class="dot dot5"></span>
     </div>
     <div class="bottom">
-    </div>
-    <div id="cube2">
-      <div class="front">
-      </div>
-      <div class="back">
-      </div>
-      <div class="right">
-      </div>
-      <div class="left">
-      </div>
-      <div class="top">
-      </div>
-      <div class="bottom">
-      </div>
+      <span class="dot dot1"></span>
+      <span class="dot dot2"></span>  
+      <span class="dot dot3"></span>
+      <span class="dot dot4"></span>
+      <span class="dot dot5"></span>
+      <span class="dot dot6"></span>
     </div>
   </div>
 </section>
