--- a/examples/ud6/ex1/doc.html
+++ b/examples/ud6/ex1/doc.html
@@ -1,37 +1,8 @@
 <section class="container">
-  <div id="cube">
-    <div class="front">
-      <span class="dot dot1"></span>
+    <div id="tetraedro">
+      <div class="triangulo cara1"></div>
+      <div class="triangulo cara2"></div>
+      <div class="triangulo cara3"></div>
+      <div class="triangulo cara4"></div>
     </div>
-    <div class="back">
-      <span class="dot dot1"></span>
-      <span class="dot dot2"></span>
-    </div>
-    <div class="right">
-      <span class="dot dot1"></span>
-      <span class="dot dot2"></span>  
-      <span class="dot dot3"></span>
-    </div>
-    <div class="left">
-      <span class="dot dot1"></span>
-      <span class="dot dot2"></span>  
-      <span class="dot dot3"></span>
-      <span class="dot dot4"></span>
-    </div>
-    <div class="top">
-      <span class="dot dot1"></span>
-      <span class="dot dot2"></span>  
-      <span class="dot dot3"></span>
-      <span class="dot dot4"></span>
-      <span class="dot dot5"></span>
-    </div>
-    <div class="bottom">
-      <span class="dot dot1"></span>
-      <span class="dot dot2"></span>  
-      <span class="dot dot3"></span>
-      <span class="dot dot4"></span>
-      <span class="dot dot5"></span>
-      <span class="dot dot6"></span>
-    </div>
-  </div>
-</section>
+  </section>
