--- a/examples/ud6/ex2/doc.html
+++ b/examples/ud6/ex2/doc.html
@@ -1,8 +1,30 @@
 <section class="container">
-    <div id="tetraedro">
-      <div class="triangulo cara1"></div>
-      <div class="triangulo cara2"></div>
-      <div class="triangulo cara3"></div>
-      <div class="triangulo cara4"></div>
+  <div class="cube" id="cube1">
+    <div class="front">
     </div>
-  </section>
+    <div class="back">
+    </div>
+    <div class="right">
+    </div>
+    <div class="left">
+    </div>
+    <div class="top">
+    </div>
+    <div class="bottom">
+    </div>
+    <div id="cube2">
+      <div class="front">
+      </div>
+      <div class="back">
+      </div>
+      <div class="right">
+      </div>
+      <div class="left">
+      </div>
+      <div class="top">
+      </div>
+      <div class="bottom">
+      </div>
+    </div>
+  </div>
+</section>
