--- a/examples/ud3/ex9/doc.html
+++ b/examples/ud3/ex9/doc.html
@@ -1,27 +1,55 @@
+<h1>Memory</h1>
 <div class="baraja">
-  <div id="mew" name="mew" class="carta" onclick="girarCarta(this);">
+  <div id="karlach" name="karlach" class="carta" onclick="girarCarta(this);">
     <div class="anverso"></div>
     <div class="reverso"></div>
   </div>
-  <div id="mimikyu" name="mimikyu" class="carta" onclick="girarCarta(this);">
+  <div id="volo" name="volo" class="carta" onclick="girarCarta(this);">
     <div class="anverso"></div>
     <div class="reverso"></div>
   </div>
-  <div id="pikachu" name="pikachu" class="carta" onclick="girarCarta(this);">
+  <div id="shadowheart" name="shadowheart" class="carta" onclick="girarCarta(this);">
     <div class="anverso"></div>
     <div class="reverso"></div>
   </div>
-  <div id="mimikyu" name="mimikyu" class="carta" onclick="girarCarta(this);">
+  <div id="gale" name="gale" class="carta" onclick="girarCarta(this);">
     <div class="anverso"></div>
     <div class="reverso"></div>
   </div>
-  <div id="pikachu" name="pikachu" class="carta" onclick="girarCarta(this);">
+  <div id="halsin" name="halsin" class="carta" onclick="girarCarta(this);">
     <div class="anverso"></div>
     <div class="reverso"></div>
   </div>
-  <div id="mew" name="mew" class="carta" onclick="girarCarta(this);">
+  <div id="laezel" name="laezel" class="carta" onclick="girarCarta(this);">
+    <div class="anverso"></div>
+    <div class="reverso"></div>
+  </div>
+  <div id="karlach" name="karlach" class="carta" onclick="girarCarta(this);">
+    <div class="anverso"></div>
+    <div class="reverso"></div>
+  </div>
+  <div id="volo" name="volo" class="carta" onclick="girarCarta(this);">
+    <div class="anverso"></div>
+    <div class="reverso"></div>
+  </div>
+  <div id="shadowheart" name="shadowheart" class="carta" onclick="girarCarta(this);">
+    <div class="anverso"></div>
+    <div class="reverso"></div>
+  </div>
+  <div id="gale" name="gale" class="carta" onclick="girarCarta(this);">
+    <div class="anverso"></div>
+    <div class="reverso"></div>
+  </div>
+  <div id="halsin" name="halsin" class="carta" onclick="girarCarta(this);">
+    <div class="anverso"></div>
+    <div class="reverso"></div>
+  </div>
+  <div id="laezel" name="laezel" class="carta" onclick="girarCarta(this);">
     <div class="anverso"></div>
     <div class="reverso"></div>
   </div>
 
 </div>
+<div>Errores: <span id="errores">0</span></div>
+<div>Aciertos: <span id="aciertos">0</span></div>
+<button onclick="resetear();">Reset</button>
