organizados los controles

--- a/examples/ud3/ex9/doc.html
+++ b/examples/ud3/ex9/doc.html
@@ -50,6 +50,8 @@
   </div>
 
 </div>
-<div>Errores: <span id="errores">0</span></div>
-<div>Aciertos: <span id="aciertos">0</span></div>
-<button onclick="resetear();">Reset</button>
+<div class="controles">
+  <div>Errores: <span id="errores">0</span></div>
+  <div>Aciertos: <span id="aciertos">0</span></div>
+  <button onclick="resetear();">Reset</button>
+</div>
